--- a/Storm/Storm.csproj
+++ b/Storm/Storm.csproj
@@ -45,14 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ClassLevelMappedAttribute.cs" />
+    <Compile Include="Attributes\PropertyLevelMappedAttribute.cs" />
     <Compile Include="Attributes\StormColumnMappedAttribute.cs" />
     <Compile Include="Attributes\StormTableMappedAttribute.cs" />
-    <Compile Include="DataBinders\DataBinderFactory.cs" />
+    <Compile Include="DataBinders\AbstractDataBinder.cs" />
     <Compile Include="DataBinders\IDataBinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StormConfigurationException.cs" />
     <Compile Include="StormMapper.cs" />
-    <Compile Include="StormPersistanceException.cs" />
+    <Compile Include="StormPersistenceException.cs" />
+    <Compile Include="StormPersistenceEvents.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
