--- a/Storm/Storm.csproj
+++ b/Storm/Storm.csproj
@@ -50,7 +50,9 @@
     <Compile Include="Attributes\StormColumnMappedAttribute.cs" />
     <Compile Include="Attributes\StormTableMappedAttribute.cs" />
     <Compile Include="DataBinders\AbstractDataBinder.cs" />
+    <Compile Include="DataBinders\DataBinderFactory.cs" />
     <Compile Include="DataBinders\IDataBinder.cs" />
+    <Compile Include="DataBinders\RecordLookupMode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StormConfigurationException.cs" />
     <Compile Include="StormMapper.cs" />
