--- a/Storm/Storm.csproj
+++ b/Storm/Storm.csproj
@@ -35,9 +35,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
+    <Reference Include="System.Design" />
     <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -45,15 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributeDataManager.cs" />
     <Compile Include="Attributes\ClassLevelMappedAttribute.cs" />
     <Compile Include="Attributes\PropertyLevelMappedAttribute.cs" />
     <Compile Include="Attributes\StormColumnMappedAttribute.cs" />
     <Compile Include="Attributes\StormParameterMappedAttribute.cs" />
     <Compile Include="Attributes\StormProcedureMappedAttribute.cs" />
+    <Compile Include="Attributes\StormRelationMappedAttribute.cs" />
     <Compile Include="Attributes\StormTableMappedAttribute.cs" />
     <Compile Include="DataBinders\AbstractDataBinder.cs" />
     <Compile Include="DataBinders\DataBinderFactory.cs" />
     <Compile Include="DataBinders\IDataBinder.cs" />
+    <Compile Include="MemberInfoExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StormConfigurationException.cs" />
     <Compile Include="StormMapper.cs" />
